test/scc/pp/errors/018.a
018.t:1:15: error: missing ')' in macro parameter list